RTS-6771 Stopped the videoplayer from collapsing when resized
A style rule introduced in RTS-6485 overrules the padding-top property
set to resize the video player. We needed a more specific style rule
for the video wrapper.

--- a/themes/uib_zen/sass/layouts/responsive-sidebars.scss
+++ b/themes/uib_zen/sass/layouts/responsive-sidebars.scss
@@ -570,13 +570,16 @@ $zen-auto-include-item-base: false;
     @include zen-clear();
   }
 
-  .node-uib-article .file-video-youtube, .node-uib-article .file-video-vimeo, .node-type-area .file-video-vimeo, .node-type-area .file-video-youtube {
+  .node-uib-article .file.file-video-youtube,
+  .node-uib-article .file.file-video-vimeo,
+  .node-type-area .file.file-video-vimeo,
+  .node-type-area .file.file-video-youtube {
     position: relative;
     padding-bottom: 56.25%;
     padding-top: 10px;
     height: 0;
     overflow: hidden;
-    iframe.media-youtube-player, iframe.media-vimeo-player {
+    iframe {
       @include zen-grid-item(1, 1);
       position: absolute;
       top: 0;
